--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,6 +7,7 @@
     "stylelint-config-property-sort-order-smacss"
   ],
   "rules": {
-    "indentation": "tab"
+    "indentation": "tab",
+    "no-empty-source": null
   }
 }
