--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,6 +8,7 @@
   ],
   "rules": {
     "indentation": "tab",
-    "no-empty-source": null
+    "no-empty-source": null,
+    "no-descending-specificity": null
   }
 }
