--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": true,
   "singleQuote": true,
   "endOfLine": "crlf",
-  "printWidth": 100
+  "printWidth": 100,
+  "bracketSameLine": true
 }
