--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
     "pre-commit": "^1.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
